# caddy-docker-service-discovery

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
src/: api.rs  constants.rs  dns.rs  docker.rs  env.rs  handler.rs  main.rs  memory_kv.rs  registry.rs
