[package]
name = "caddy-docker-service-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
async-trait = "0.1.86"
bollard = "0.18.1"
dns-lookup = "2.0.4"
env_logger = "0.11.6"
futures-util = "0.3.31"
hickory-server = "0.24.3"
log = "0.4.25"
regex = "1.11.1"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = "thin"
debug = false
strip = true
